--- a/DesignProcess.html
+++ b/DesignProcess.html
@@ -109,9 +109,10 @@
 			<div class="app__inner">
 				<div class="app__menu">
 					<ul class="vMenu" style="position: fixed">
-						<li><a href="DesignPhilosophy.html" >Design Thinking</a></li>
-						<li><a href="#" class="vMenu--active"  >Design Process</a></li>
 						<li><a href="CustomizedDesign.html" >Customized Design</a></li>
+
+						<li><a href="DesignThinking.html" >Design Thinking</a></li>
+						<li><a href="#" class="vMenu--active"  >Design Process</a></li>
 
 					</ul>
 				</div>
