--- a/index_before.html
+++ b/index_before.html
@@ -68,7 +68,7 @@
 						<h2 style="text-align: center ; font-family: Futura; color: #fff">Hi! I'm William Jin, a designer who designs (almost) everything :)
 							</h2>
 						<a href="./pdfs/resume.pdf" class="button button__accent">My Resume</a>
-						<a href="DesignPhilosophy.html" class="button hero__button">Design Philosophy</a>
+						<a href="DesignThinking.html" class="button hero__button">Design Philosophy</a>
 					</div>
 				</div>
 			</div>
