--- a/CustomizedDesign.html
+++ b/CustomizedDesign.html
@@ -109,9 +109,10 @@
 			<div class="app__inner">
 				<div class="app__menu">
 					<ul class="vMenu" style="position: fixed">
-						<li><a href="DesignPhilosophy.html" >Design Thinking</a></li>
+                        <li><a href="#" class="vMenu--active" >Customized Design</a></li>
+
+                        <li><a href="DesignThinking.html" >Design Thinking</a></li>
 						<li><a href="DesignProcess.html" >Design Process</a></li>
-						<li><a href="#" class="vMenu--active" >Customized Design</a></li>
 
 					</ul>
 				</div>
