--- a/DesignThinking.html
+++ b/DesignThinking.html
@@ -109,9 +109,10 @@
 			<div class="app__inner">
 				<div class="app__menu">
 					<ul class="vMenu" style="position: fixed">
-						<li><a href="DesignPhilosophy.html" class="vMenu--active"  >Design Thinking</a></li>
-						<li><a href="DesignProcess.html" >Design Process</a></li>
 						<li><a href="CustomizedDesign.html" >Customized Design</a></li>
+						<li><a href="DesignThinking.html" class="vMenu--active"  >Design Thinking</a></li>
+						<li><a href="DesignProcess.html" >Design Process</a></li>
+
 
 					</ul>
 				</div>
