--- a/EZChat.html
+++ b/EZChat.html
@@ -108,32 +108,35 @@
 			<div class="app__inner">
 				<div class="app__menu">
 					<ul class="vMenu" style="position: fixed">
-						<li><a href="#"  >Project Brief</a></li>
-						<li><a href="#2" >Background</a></li>
-						<li><a href="#3">User Research</a></li>
-						<li><a href="#4">App Design</a></li>
-						<li><a href="#5">Prototype</a></li>
+						<li><a onclick="myFunction(1)" style="cursor: pointer" >Project Brief</a></li>
+						<li><a onclick="myFunction(2)" style="cursor: pointer">Background</a></li>
+						<li><a onclick="myFunction(3)" style="cursor: pointer">User Research</a></li>
+						<li><a onclick="myFunction(4)" style="cursor: pointer">App Design</a></li>
+						<li><a onclick="myFunction(5)" style="cursor: pointer">Prototype</a></li>
 					</ul>
 				</div>
 				<div class="app__main">
 					<div class="text-container">
-						<h1 class="app__main__title">EZChat</h1>
+						<h1 class="app__main__title" id="1">EZChat</h1>
 						<P>Product Design/ Independent Project<br>
 						</P>
 						<h3>Project Brief</h3>
 						<P>EZchat is a social media App that can make our life easier by several features.</P>
-						<img id="2" src="images/EZChat/1.jpg">
+						<img  src="images/EZChat/1.jpg">
 
-						<h3>Hypothesis: Social Media & Social Status</h3>
+						<h3 id="2">Hypothesis: Social Media & Social Status</h3>
 						<P>Social media not only facilitates the creation and sharing of information, but also puts pressure on us and creates a virtual social status for everyone, which is the major source of anxiety.
 <br><br>
 							People using multiple (7 - 11) social media platforms are more likely to feel anxious and depressed, according to a research in 2017.
 							We are afraid of other's success and ourselves' being ignored - which could increase their and decrease our social status respectively.
 <br><br>
 							Pursuing a higher social status is important and even becomes some people's goal - those with higher social status can always receive more "like"s, and be respected on the social media.<br></P>
-						<img id="3" src="images/EZChat/2.jpg">
+						<img  src="images/EZChat/2.jpg">
 
-						<H3>User Research</H3>
+						<h3>Strong Ties and Weak Ties</h3>
+						<P></P>
+
+						<H3 id="3">User Research</H3>
 						<H4>Questionnaire</H4>
 						<P>
 							Questionnaires were sent online and 195 valid ones were collected.
@@ -164,9 +167,9 @@
 
 						<h4>The lifecycle of Social Media</h4>
 						<P>When a social media first appear, users flock to it and the amount of users can culminate for a long time. Eventually the figure will decline and reach a plateau, when another social media can start to thrive.</P>
-						<img id="4" src="images/EZChat/23.jpg">
+						<img  src="images/EZChat/23.jpg">
 
-						<h3>App Design: EZchat, EZ Life.</h3>
+						<h3 id="4">App Design: EZchat, EZ Life.</h3>
 						<h4>Logo & Color</h4>
 						<P>The Logo is composed of "e" and "z". Green is chosen as the theme color to create an easy atmosphere.
 						</P>
@@ -195,9 +198,9 @@
 						<P>Users can choose a mode(public/private) by pushing the red(public)/green(private) button on the right side when updating their posts. Posts in private mode can only be seen by friends, while public mode allows users to spread their stories to a wide range of people.</P>
 						<img src="images/EZChat/32.png" style="width: 40%; margin-left: 30%; box-shadow: 0px 0px 20px #c0c0c0">
 
-						<h3>Programming</h3>
+						<h3 id="5">Programming</h3>
 						<P>I made a prototype of EZchat by Xcode and Swift.</P>
-						<img id="5" src="images/EZChat/33.jpg" style="box-shadow: 0px 0px 20px #c0c0c0">
+						<img  src="images/EZChat/33.jpg" style="box-shadow: 0px 0px 20px #c0c0c0">
 						<iframe width="100%" height="350" src="https://www.youtube.com/embed/LxDx5P5zDVo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						<h4>What did I learn from programming?</h4>
 						<P>Default settings are often better and time-saving. If do not know how to design, then just use default settings!</P>
@@ -243,5 +246,10 @@
 		</div>
 	</div>
 <script src='js/app.min.js'></script>
+<script>function myFunction(n) {
+    var elmnt = document.getElementById(n);
+    elmnt.scrollIntoView();
+    window.scrollBy(0, -80);
+}</script>
 </body>
 </html>
