--- a/IBM.html
+++ b/IBM.html
@@ -108,10 +108,10 @@
 			<div class="app__inner">
 				<div class="app__menu">
 					<ul class="vMenu" style="position: fixed">
-						<li><a href="#"  >RPA</a></li>
-						<li><a href="#2" >EDPA</a></li>
-						<li><a href="#3">EMMA</a></li>
-						<li><a href="#4">Smart Community</a></li>
+						<li><a onclick="myFunction(1)" style="cursor: pointer"  >RPA</a></li>
+						<li><a onclick="myFunction(2)" style="cursor: pointer" >EDPA</a></li>
+						<li><a onclick="myFunction(3)" style="cursor: pointer">EMMA</a></li>
+						<li><a onclick="myFunction(4)" style="cursor: pointer">Smart Community</a></li>
 					</ul>
 				</div>
 				<div class="app__main">
@@ -123,7 +123,7 @@
 						<br>
 						<B>Tools: </B>Sketch, Invision, Principle, Html, Imovie, ...</P>
 
-						<h3>RPA</h3>
+						<h3 id="1">RPA</h3>
 						<P>RPA is a robot management platform. I designed several interfaces cooperating with senior designers and made a hi-fi prototype by using invison and principle.</P>
 						<img src="images/IBM/9.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
 						<img src="images/IBM/10.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
@@ -137,14 +137,14 @@
 						<img src="images/IBM/2.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
 						<img src="images/IBM/3.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
 						<img src="images/IBM/4.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
-						<img id="3" src="images/IBM/5.png" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
+						<img  src="images/IBM/5.png" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
 
-						<h3>EMMA</h3>
+						<h3 id="3">EMMA</h3>
 						<P>I redesigned the interaction process and interfaces of EMMA, which is a web-based platform allowing companies to asses their positions.</P>
 						<img src="images/IBM/7.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
-						<img id="4" src="images/IBM/8.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
+						<img  src="images/IBM/8.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
 
-						<h3>Smart Community</h3>
+						<h3 id="4">Smart Community</h3>
 						<P>Smart Community is an mobile app facilitating real estates to manage their communities. </P>
 						<img src="images/IBM/6.png" style=" box-shadow: 0px 0px 20px #c0c0c0; width: 40%; margin-left: 30% ">
 
@@ -192,5 +192,10 @@
 		</div>
 	</div>
 <script src='js/app.min.js'></script>
+	<script>function myFunction(n) {
+        var elmnt = document.getElementById(n);
+        elmnt.scrollIntoView();
+        window.scrollBy(0, -80);
+    }</script>
 </body>
 </html>
