--- a/Pianooooo.html
+++ b/Pianooooo.html
@@ -114,16 +114,16 @@
 			<div class="app__inner">
 				<div class="app__menu">
 					<ul class="vMenu" style="position: fixed">
-						<li><a href="#"  >Project Brief</a></li>
-						<li><a href="#2">Background</a></li>
-						<li><a href="#3">Case Study</a></li>
-						<li><a href="#4">Solution</a></li>
-						<li><a href="#5">Deliverable</a></li>
+						<li><a onclick="myFunction(1)" style="cursor: pointer"  >Project Brief</a></li>
+						<li><a onclick="myFunction(2)" style="cursor: pointer">Background</a></li>
+						<li><a onclick="myFunction(3)" style="cursor: pointer">Case Study</a></li>
+						<li><a onclick="myFunction(4)" style="cursor: pointer">Solution</a></li>
+						<li><a onclick="myFunction(5)" style="cursor: pointer">Deliverable</a></li>
 					</ul>
 				</div>
 				<div class="app__main">
 					<div class="text-container">
-						<h1 class="app__main__title">Pianooooo</h1>
+						<h1 class="app__main__title" id="1">Pianooooo</h1>
 						<P>Service & UX Design / Independent Work</P>
 						<h3>Project Brief</h3>
 						<P>Pianooooo is a service design that have different functions and can be applied in different areas. Users can play the piano by scanning the QR code. Those who cannot play the piano can also try to play it like a game. Others can buy food, drink and related souvenirs as well as taking a rest at Pianooooo. After playing the piano, users who are interested in Pianooooo can purchase online courses and piano tickets via the App.
@@ -131,9 +131,9 @@
 						<P style="color: #CB4D4D">
 							Pianooooo was realized by others several months after I finished my design, though in a relatively simple and primitive form(users can only scan the QR code to play the piano). Though disappointing, it proved the possibility and lucrativeness of such a business model, as well as my insight in the realm of business.</P>
 
-						<img src="images/Pianooooo/0.0.jpg" id="2">
+						<img src="images/Pianooooo/0.0.jpg">
 
-						<h3 >Bacground: In a hurry</h3>
+						<h3 id="2">Bacground: In a hurry</h3>
 						<P>Many people are suffering from anxiety and becoming workaholics nowadays, owning to their
 							extremely fast lifestyle. As is reported, 21.5% of the people are suffering from anxiety and 2.5% are
 							suffering from severe anxiety. For them, there is no time to take a break and rethink the meaning of life.
@@ -158,9 +158,9 @@
 						<img src="images/Pianooooo/44.jpg">
 						<h3>SWOT Analysis: How Can We Improve Them?</h3>
 						<P>Though the public piano is primarily an artwork currently, it has its potential to become a brand-new business model.</P>
-						<img src="images/Pianooooo/46.png" id="3">
+						<img src="images/Pianooooo/46.png" >
 
-						<h3>Field Trip & Interview: Where?</h3>
+						<h3 id="3">Field Trip & Interview: Where?</h3>
 
 						<P>Public pianos are suitable at nearly any place, especially in hospitals, stations, schools, cafes and shopping centers where many people spend their considerable time waiting or doing other things.
 <br><br>
@@ -298,5 +298,10 @@
 		</div>
 	</div>
 <script src='js/app.min.js'></script>
+	<script>function myFunction(n) {
+        var elmnt = document.getElementById(n);
+        elmnt.scrollIntoView();
+        window.scrollBy(0, -80);
+    }</script>
 </body>
 </html>
