--- a/test.html
+++ b/test.html
@@ -77,7 +77,7 @@
 
                     <div style="width: 20%; float: right; margin-top: -130px">
                         <a href="./pdfs/resume.pdf" class="button button__primary">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My Resume&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a><br>
-                        <a href="DesignPhilosophy.html" class="button button__accent">Design Philosophy</a>
+                        <a href="DesignThinking.html" class="button button__accent">Design Philosophy</a>
                     </div>
 
                 </div>
