--- a/EZChat.html
+++ b/EZChat.html
@@ -110,9 +110,10 @@
 					<ul class="vMenu" style="position: fixed">
 						<li><a onclick="myFunction(1)" style="cursor: pointer" >Project Brief</a></li>
 						<li><a onclick="myFunction(2)" style="cursor: pointer">Background</a></li>
+						<li><a onclick="myFunction(6)" style="cursor: pointer">Competitive Analysis</a></li>
 						<li><a onclick="myFunction(3)" style="cursor: pointer">User Research</a></li>
-						<li><a onclick="myFunction(4)" style="cursor: pointer">App Design</a></li>
-						<li><a onclick="myFunction(5)" style="cursor: pointer">Prototype</a></li>
+						<li><a onclick="myFunction(4)" style="cursor: pointer">App Design & Prototype</a></li>
+
 					</ul>
 				</div>
 				<div class="app__main">
@@ -133,8 +134,23 @@
 							Pursuing a higher social status is important and even becomes some people's goal - those with higher social status can always receive more "like"s, and be respected on the social media.<br></P>
 						<img  src="images/EZChat/2.jpg">
 
-						<h3>Strong Ties and Weak Ties</h3>
-						<P></P>
+						<h3 id="6">Strong Ties and Weak Ties</h3>
+						<P>Social media brings us weak ties <i>(Mark Granovetter, 1973)</i> - those who are not familiar with us also can be our "friends" on social media.<br><br>
+						According to strong and weak ties, social media platforms can be classified into two groups:<br>
+						Some emphasize strong ties: Messenger, WeChat, WhatsApp, ... These Apps are more like chatting tools, using "Chats" as homepages.<br>
+						The others emphasize weak ties, or try to make balance between strong and weak ties. These Apps tend to use "Posts" or "Stories" as homepages.</P>
+
+						<h3>Competitive Analysis</h3>
+						<p>How do these popular social media design their App and why?</p>
+						<img src="images/EZChat/34.jpg">
+
+						<h4>Perceptual Mapping</h4>
+						<P>What we need is an highly customized App that can make a good balance between private and public (i.e. strong and weak ties).</P>
+						<img src="images/EZChat/30.jpg" style="width: 60%; margin-left: 30%">
+
+						<h4>The lifecycle of Social Media</h4>
+						<P>When a social media first appear, users flock to it and the amount of users can culminate for a long time. Eventually the figure will decline and reach a plateau, when another social media can start to thrive.</P>
+						<img  src="images/EZChat/23.jpg">
 
 						<H3 id="3">User Research</H3>
 						<H4>Questionnaire</H4>
@@ -157,21 +173,16 @@
 						</P>
 						<img src="images/EZChat/22.jpg">
 
-						<h3>Competitive Analysis</h3>
-							<p>How do these popular social media design their App and why?</p>
-						<img src="images/EZChat/34.jpg">
+						<h3>Research Summary</h3>
+						<b><P>In weak ties, anxiety and stress come from FOMO and cognitive dissonance, which is a major source. In strong ties, they're from the change of social status and spotlight effect. Anxiety and stress appear mostly on the "Chats" and "Posts" pages. Some users are already tired with numerous social media platforms.
+						</P></b>
+						<img src="images/EZChat/Anxiety%20and%20Stress.png" >
 
-						<h4>Perceptual Mapping</h4>
-						<P>What we need is an highly customized App that can make a good balance between private and public.</P>
-						<img src="images/EZChat/30.jpg" style="width: 60%; margin-left: 30%">
 
-						<h4>The lifecycle of Social Media</h4>
-						<P>When a social media first appear, users flock to it and the amount of users can culminate for a long time. Eventually the figure will decline and reach a plateau, when another social media can start to thrive.</P>
-						<img  src="images/EZChat/23.jpg">
 
 						<h3 id="4">App Design: EZchat, EZ Life.</h3>
 						<h4>Logo & Color</h4>
-						<P>The Logo is composed of "e" and "z". Green is chosen as the theme color to create an easy atmosphere.
+						<P>Based on previous research, EZchat will focus on strong ties, which means the homepage will be "Chats". The Logo is composed of "e" and "z". Green is chosen as the theme color to create an easy atmosphere.
 						</P>
 						<img src="images/EZChat/5.png" style="width: 20%; margin-left: 40%">
 
