--- a/EZChat.html
+++ b/EZChat.html
@@ -189,7 +189,7 @@
 						<h4>Features</h4>
 						<P>EZchat could make our life (a little bit) easier by these features - a little bit is enough.</P>
 						<h4>Set Relationship</h4>
-						<P>Always forget to talk to your family? Just set a higher relationship and system will highlight them automatically by light green color, according to the time and relationship level.</P>
+						<P>Always forget to talk to your family? Just set a higher relationship and system will highlight them automatically by light green color, according to the time and relationship level. For most of the people, 7 levels of relationship are enough.</P>
 						<img src="images/EZChat/setRelationship.gif">
 
 						<h4>Higher Cell</h4>
