--- a/EZChat.html
+++ b/EZChat.html
@@ -145,7 +145,7 @@
 						<img src="images/EZChat/34.jpg">
 
 						<h4>Perceptual Mapping</h4>
-						<P>What we need is an highly customized App that can make a good balance between private and public (i.e. strong and weak ties).</P>
+						<P>What we need is an highly customized App <a href="CustomizedDesign.html" style="color: blue"><u>(What is Customized Design?)</u></a> that can make a good balance between private and public (i.e. strong and weak ties).</P>
 						<img src="images/EZChat/30.jpg" style="width: 60%; margin-left: 30%">
 
 						<h4>The lifecycle of Social Media</h4>
