--- a/IBM.html
+++ b/IBM.html
@@ -108,8 +108,9 @@
 			<div class="app__inner">
 				<div class="app__menu">
 					<ul class="vMenu" style="position: fixed">
-						<li><a onclick="myFunction(1)" style="cursor: pointer"  >RPA</a></li>
 						<li><a onclick="myFunction(2)" style="cursor: pointer" >EDPA</a></li>
+						<li><a onclick="myFunction(1)" style="cursor: pointer"  >RPA</a></li>
+
 						<li><a onclick="myFunction(3)" style="cursor: pointer">EMMA</a></li>
 						<li><a onclick="myFunction(4)" style="cursor: pointer">Smart Community</a></li>
 					</ul>
@@ -123,6 +124,15 @@
 						<br>
 						<B>Tools: </B>Sketch, Invision, Principle, Html, Imovie, ...</P>
 
+						<h3 id="2">EDPA Data Management Platform</h3>
+						<P>EDPA is a platform helping companies manage their big data. As the only designer in my team, I redesigned its information architecture and interfaces with several engineers in a week.</P>
+
+						<img src="images/IBM/EDPA_New/2.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
+						<img src="images/IBM/EDPA_New/3.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
+						<img src="images/IBM/EDPA_New/1.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
+						<img src="images/IBM/EDPA_New/4.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
+						<img  src="images/IBM/5.png" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
+
 						<h3 id="1">RPA</h3>
 						<P>RPA is a robot management platform. I designed several interfaces cooperating with senior designers and made a hi-fi prototype by using invison and principle.</P>
 						<img src="images/IBM/9.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
@@ -130,14 +140,7 @@
 						<img src="images/IBM/11.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
 
 
-						<h3 id="2">EDPA Data Management Platform</h3>
-						<P>EDPA is a platform helping companies manage their big data. As the only designer in my team, I redesigned its information architecture and interfaces with several engineers in a week.</P>
 
-						<img src="images/IBM/1.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
-						<img src="images/IBM/2.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
-						<img src="images/IBM/3.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
-						<img src="images/IBM/4.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
-						<img  src="images/IBM/5.png" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
 
 						<h3 id="3">EMMA</h3>
 						<P>I redesigned the interaction process and interfaces of EMMA, which is a web-based platform allowing companies to asses their positions.</P>
