--- a/IBM.html
+++ b/IBM.html
@@ -125,13 +125,41 @@
 						<B>Tools: </B>Sketch, Invision, Principle, Html, Imovie, ...</P>
 
 						<h3 id="2">EDPA Data Management Platform</h3>
-						<P>EDPA is a platform helping companies manage their big data. As the only designer in my team, I redesigned its information architecture and interfaces with several engineers in a week.</P>
+						<P>EDPA is a platform used by <b>engineers</b> helping companies manage their big data. As the only designer in my team,
+							I redesigned its information architecture and interfaces with several engineers in a week.</P>
+						<h4>Before Starting</h4>
+						<P>My knowledge in SQL and statistics made it easier to understand this product. However, I still had to learn a lot.</P>
+						<img src="images/IBM/EDPA_New/5.png" style="width: 60%; margin-left: 20%">
+						<P>The most important 3 concepts in EDPA are category, term and data set. A category contains 0 or more terms, which can also be grouped by data sets.</P>
+						<h4>Information Architecture</h4>
+						<P>My design focused on the Data Asset Management tab. The 3 major needs for users are:
+						<br>Check and manipulate the Asset Index;<br>
+						Manage the Data Set;<br>
+						Check Data Quality.<br><br>
+						Since they are not closely related, I decided to put them on the sidebar(which can be hidden) as three major tabs in Data Asset Management.</P>
+
+						<h4>Asset Index</h4>
+						<P>The tree index clearly shows the hierarchy of categories and terms, allowing users to find a category/term manually. There's also a global search bar
+							to help them search by keywords or status. Because of the limited space, I designed a sidebar (Event tab) to show
+							notifications when the data updates.</P>
+
+						<img src="images/IBM/EDPA_New/1.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
+
+						<h4>Data Set Management</h4>
+						<P>It took me a while to persuade engineers in my team to implement the Card Based Design, by Competitor Analysis and A/B Testing. From my opinion, when there's only a
+						few of the elements and we don't have to sort them, Cards are better than tables.</P>
 
 						<img src="images/IBM/EDPA_New/2.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
+						<P>Turning on / off the automatic update is important. Therefore, the according button was
+							designed blue and other buttons are icons from IBM design language and are greyscale.</P>
 						<img src="images/IBM/EDPA_New/3.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
-						<img src="images/IBM/EDPA_New/1.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
 						<img src="images/IBM/EDPA_New/4.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
 						<img  src="images/IBM/5.png" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
+
+						<h4>What did I learn from that week?</h4>
+						<P>- Only when we understand the technical and business part of the product can we use design to drive it. <br>
+						- Product and Design Thinking are important even for engineers.<br>
+						- It's important to learn how to communicate with and persuade others. </P>
 
 						<h3 id="1">RPA</h3>
 						<P>RPA is a robot management platform. I designed several interfaces cooperating with senior designers and made a hi-fi prototype by using invison and principle.</P>
