--- a/EZChat.html
+++ b/EZChat.html
@@ -165,7 +165,7 @@
 							We are afraid of other's success and ourselves' being ignored - which could increase their and decrease our social status respectively.
 <br><br>
 							Pursuing a higher social status is important and even becomes some people's goal - those with higher social status can always receive more "like"s, and be respected on the social media.<br></P>
-						<img  src="images/EZChat/2.jpg">
+						<img class="img" src="images/EZChat/2.jpg">
 
 						<h3 id="6">Strong Ties and Weak Ties</h3>
 						<P>Social media brings us weak ties <i>(Mark Granovetter, 1973)</i> - those who are not familiar with us also can be our "friends" on social media.<br><br>
