--- a/EZChat.html
+++ b/EZChat.html
@@ -158,7 +158,7 @@
 						<P>EZchat is a social media App that can make our life easier by several features.</P>
 						<img  src="images/EZChat/1.jpg">
 
-						<h3 id="2">Hypothesis: Social Media & Social Status</h3>
+						<h3 id="2">Social Media and Stress</h3>
 						<P>Social media not only facilitates the creation and sharing of information, but also puts pressure on us and creates a virtual social status for everyone, which is the major source of anxiety.
 <br><br>
 							People using multiple (7 - 11) social media platforms are more likely to feel anxious and depressed, according to a research in 2017.
@@ -181,9 +181,10 @@
 						<P>What we need is an highly customized App <a href="CustomizedDesign.html" style="color: blue"><u>(What is Customized Design?)</u></a> that can make a good balance between private and public (i.e. strong and weak ties).</P>
 						<img src="images/EZChat/30.jpg" style="width: 60%; margin-left: 20%">
 
-						<h4>The lifecycle of Social Media</h4>
+				<!--		<h4>The lifecycle of Social Media</h4>
 						<P>When a social media first appear, users flock to it and the amount of users can culminate for a long time. Eventually the figure will decline and reach a plateau, when another social media can start to thrive.</P>
 						<img  src="images/EZChat/23.jpg" style="width: 60%; margin-left: 20%">
+				-->
 
 						<H3 id="3">User Research</H3>
 						<H4>Questionnaire</H4>
